--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -73,7 +73,7 @@
                 <div class="col-xs-2 text-center">
                     <div id="hxco-logo" style="margin-top: 0px;"><a href="#"><img src="/static/images/web/index/logo.png" style="height: 30px;width: auto;margin-top:-5px;"></a></div>
                 </div>
-                <div class="col-xs-10 text-center menu-1">
+                <div class="col-xs-10 text-center">
                     {#					<ul>#}
                     {#                        <li><a href="/" id="home">首页</a></li>#}
                     {#                        <li><a href="/certification">学历学位认证</a></li>#}
