--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -56,7 +56,7 @@
             {#                <h3>论文提升</h3>#}
             {#            </div>#}
             <div class="row">
-                <div class="col-md-3 col-sm-3">
+                <div class="col-xs-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-pencil2"></i>
@@ -69,7 +69,7 @@
                 </div>
 
 
-                <div class="col-md-3 col-sm-3">
+                <div class="col-xs-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-laptop"></i>
@@ -80,7 +80,7 @@
                         <p>任务辅导与考前应急</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3">
+                <div class="col-xs-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-books"></i>
@@ -91,7 +91,7 @@
                         <p>分组项目的全程跟踪指导</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-3">
+                <div class="col-xs-3">
                     <div class="index-feature-center function-summary animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
 							<i class="icon-office"></i>
