--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -45,7 +45,7 @@
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-{#            <li data-target="#carousel-example-generic" data-slide-to="2"></li>#}
+            {#            <li data-target="#carousel-example-generic" data-slide-to="2"></li>#}
         </ol>
 
         <!-- Wrapper for slides -->
@@ -63,11 +63,11 @@
             <div class="item">
                 <img src="/static/images/web/index/3.jpg" style="width: 100%;"  alt="四川恒心前途教育咨询">
                 <div class="carousel-caption" style="bottom: 150px;">
-{#                    <h1 class="carousel-h1 animate-box">恒心教育</h1>#}
-{#                    <br/>#}
-{#                    <div class="carousel-h2 animate-box"><span>留学群体的一站式管家</span></div>#}
-{#                    <br/>#}
-{#                    <p class="carousel-p animate-box">HEX, YOUR TROUBLE TERMINATOR.</p>#}
+                    {#                    <h1 class="carousel-h1 animate-box">恒心教育</h1>#}
+                    {#                    <br/>#}
+                    {#                    <div class="carousel-h2 animate-box"><span>留学群体的一站式管家</span></div>#}
+                    {#                    <br/>#}
+                    {#                    <p class="carousel-p animate-box">HEX, YOUR TROUBLE TERMINATOR.</p>#}
                 </div>
             </div>
         </div>
@@ -222,56 +222,60 @@
             </div>
         </div>
         <div class="container" style="margin-top: 2em;">
-            <div class="">
-                <div class="col-xs-6">
-                    <div class="feature-banner animate-box" data-animate-effect="fadeInLeft">
+            <div class="col-xs-6 col-xs-push-6">
+                <div class="hxco-feature-image animate-box fadeInUp animated">
+                    <img src="/static/images/web/index/user2.png" alt="Free HTML5 Bootstrap Template by FREEHTML5.co">
+                </div>
+            </div>
+            <div class="col-xs-6 col-xs-pull-6">
+                <div class="feature-banner animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="icon-leaf"></i>
 						</span>
-						<div class="feature-banner-copy">
-							<h4>极简页面</h4>
-                            <p>突出强大功能的极简页面，让你的需求变得一目了然</p>
-						</div>
-					</div>
+                    <div class="feature-banner-copy">
+                        <h4>极简页面</h4>
+                        <p>突出强大功能的极简页面，让你的需求变得一目了然</p>
+                    </div>
+                </div>
 
-                     <div class="feature-banner animate-box" data-animate-effect="fadeInLeft">
+                <div class="feature-banner animate-box" data-animate-effect="fadeInLeft">
 						<span class="icon">
 							<i class="icon-search"></i>
 						</span>
-						<div class="feature-banner-copy">
-							<h4>实时查询</h4>
-                            <p>实时进度查询，让每一步都在你的掌控之中</p>
-						</div>
-					</div>
+                    <div class="feature-banner-copy">
+                        <h4>实时查询</h4>
+                        <p>实时进度查询，让每一步都在你的掌控之中</p>
+                    </div>
+                </div>
 
-                     <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" style="margin-bottom: 4em;">
+                <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" style="margin-bottom: 4em;">
 						<span class="icon">
 							<i class="icon-onedrive"></i>
 						</span>
-						<div class="feature-banner-copy">
-							<h4>丰富奖励</h4>
-                            <p>带领新会员入门，还将有巨大惊喜与福利相赠</p>
-						</div>
-					</div>
-
-                    <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" >
-                        <a href="/u/index" class="btn btn-info">用户中心登录&nbsp;&nbsp;&gt;&gt;</a>
+                    <div class="feature-banner-copy">
+                        <h4>丰富奖励</h4>
+                        <p>带领新会员入门，还将有巨大惊喜与福利相赠</p>
                     </div>
                 </div>
 
-                <div class="col-xs-6">
-                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/index/1.jpg); ">
-
-                    </div>
-
+                <div class="feature-banner animate-box" data-animate-effect="fadeInLeft" >
+                    <a href="/u/index" class="btn btn-info">用户中心登录&nbsp;&nbsp;&gt;&gt;</a>
                 </div>
-
             </div>
+
+            {#                <div class="col-md-6 col-md-push-6">#}
+            {#                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/web/index/1.jpg); ">#}
+            {##}
+            {#                </div>#}
+
         </div>
+
+
+    </div>
     </div>
 
     <div class="hxco-features-2">
-        <div id="hxco-counter" class="hxco-bg hxco-counter" style="background-attachment: fixed;background-image: url(../../static/images/web/tqpc_bg.png);background-repeat: repeat;background-size: contain;">
+        <div id="hxco-counter" class="hxco-bg hxco-counter" style="">
             <div class="hxco-container">
                 <div class="row feature-title text-center" style=" margin-top: 4em;">
                     <h3>我们的成就</h3>
@@ -326,7 +330,7 @@
                     <h3>我们的成功案例</h3>
                 </div>
                 <div class="container">
-                    <div id="owl-car" class="owl-carousel owl-carousel-fullwidth ">
+                    <div id="owl-car" class="owl-carousel ">
 
                         <div class="item testimony-slide active text-center">
                             <figure>
@@ -407,11 +411,33 @@
     </div>
     <script>
         $(function(){
+{#            $('#owl-car').owlCarousel({#}
+{#                items: 4,#}
+{#                navigation: true,#}
+{#                navigationText: ["上一个","下一个"]#}
+{#            });#}
             $('#owl-car').owlCarousel({
+                loop:true,
+                margin:10,
+                nav:true,
+                dots: true,
                 items: 4,
-                navigation: true,
-                navigationText: ["上一个","下一个"]
-            });
+{#                responsive:{#}
+{#                    0:{#}
+{#                        items:1#}
+{#                    },#}
+{#                    600:{#}
+{#                        items:3#}
+{#                    },#}
+{#                    1000:{#}
+{#                        items:3#}
+{#                    }#}
+{#                },#}
+                navText: [
+                  "<i class='icon-arrow-left2 owl-direction'></i>",
+                  "<i class='icon-arrow-right2 owl-direction'></i>"
+                ]
+		    })
         });
     </script>
     {#	<div id="hxco-services">#}
