--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -397,7 +397,7 @@
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  data-fancybox="gallery" href="/static/images/web/sample/03.jpg">
+                                <a  class="image-popup" href="/static/images/web/sample/03.jpg">
                                     <img src="/static/images/web/sample/03.jpg" alt="user">
                                 </a>
                             </figure>
@@ -417,8 +417,8 @@
 {#                navigationText: ["上一个","下一个"]#}
 {#            });#}
             $('#owl-car').owlCarousel({
-                loop:true,
-                margin:10,
+{#                loop:true,#}
+                margin:0,
                 nav:true,
                 dots: true,
                 items: 4,
