--- a/core/templates/web/index.html
+++ b/core/templates/web/index.html
@@ -397,7 +397,7 @@
                         </div>
                         <div class="item testimony-slide active text-center">
                             <figure>
-                                <a  class="image-popup" href="/static/images/web/sample/03.jpg">
+                                <a  data-fancybox="gallery" href="/static/images/web/sample/03.jpg">
                                     <img src="/static/images/web/sample/03.jpg" alt="user">
                                 </a>
                             </figure>
