--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -170,6 +170,7 @@
                     <p>You are fortunate, 你只是别别人多了恒心</p>
                     <p><i class="icon-location"></i>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</p>
                     <p>All rights reserved Copyright © 四川恒心前途教育咨询有限公司</p>
+                    <p>蜀ICP备17014004号</p>
                 </div>
                 <div class="col-md-4">
                     <h3>热门标签</h3>
