--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -176,7 +176,7 @@
                     <h3>热门标签</h3>
                     <div style="margin-top: 1em">
                         <a class="tagA" href="/certification">
-                            学历学位认证
+                            学历学位获取
                         </a>
                         <a class="tagA" href="/highschool">
                             初高中申请
