--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -42,7 +42,7 @@
                             <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
+                            <h5>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
 {#                            <h5></h5>#}
                         </div>
                         <br/>
@@ -59,80 +59,80 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-        <div id="hxco-features-2" style="background: #fff" style="width:100%;">
-            <div class="hxco-container1" style="width:100% !important;">
+{#        <div class="container">#}
+{#        <div id="hxco-features-2" style="background: #fff" style="width:100%;">#}
+{#            <div class="hxco-container1" style="width:100% !important;">#}
 {#                <div class="row feature-title text-center" id="wangke">#}
 {#                    <h3>什么情况会认证受阻？</h3>#}
 {#                </div>#}
-                <div class="row">
-                    <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">
-                        <h1>什么情况会认证受阻?</h1>
-                    </div>
-
-                </div>
-                <div class="row" style="">
-                    <div class="col-xs-6">
-                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cross"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>国外就读院校不在认证范以内</h4>
-                            </div>
-                        </div>
-
-                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cross"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>成绩单非官方颁发</h4>
-                            </div>
-                        </div>
-
-                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cross"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>国内外合作办学项目，未在留学生服务中心备案</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-6">
-                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cross"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>学成归国后，毕业证，成绩单或者其他重要材料遗失</h4>
-                            </div>
-                        </div>
-
-                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cross"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>有转学分情况，不满足认证条件 </h4>
-                            </div>
-                        </div>
-
-                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                            <span class="icon">
-                                <i class="icon-cross"></i>
-                            </span>
-                            <div class="feature-copy">
-                                <h4>由于各种原因被就读学校除名，导致合法身份失效</h4>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
+{#                <div class="row">#}
+{#                    <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">#}
+{#                        <h1>什么情况会认证受阻?</h1>#}
+{#                    </div>#}
+{##}
+{#                </div>#}
+{#                <div class="row" style="">#}
+{#                    <div class="col-xs-6">#}
+{#                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cross"></i>#}
+{#                            </span>#}
+{#                            <div class="feature-copy">#}
+{#                                <h4>国外就读院校不在认证范以内</h4>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cross"></i>#}
+{#                            </span>#}
+{#                            <div class="feature-copy">#}
+{#                                <h4>成绩单非官方颁发</h4>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cross"></i>#}
+{#                            </span>#}
+{#                            <div class="feature-copy">#}
+{#                                <h4>国内外合作办学项目，未在留学生服务中心备案</h4>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="col-xs-6">#}
+{#                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cross"></i>#}
+{#                            </span>#}
+{#                            <div class="feature-copy">#}
+{#                                <h4>学成归国后，毕业证，成绩单或者其他重要材料遗失</h4>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cross"></i>#}
+{#                            </span>#}
+{#                            <div class="feature-copy">#}
+{#                                <h4>有转学分情况，不满足认证条件 </h4>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">#}
+{#                            <span class="icon">#}
+{#                                <i class="icon-cross"></i>#}
+{#                            </span>#}
+{#                            <div class="feature-copy">#}
+{#                                <h4>由于各种原因被就读学校除名，导致合法身份失效</h4>#}
+{#                            </div>#}
+{#                        </div>#}
+{##}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#        </div>#}
         <div class="container" style="margin-top:3em;">
             <div class="row">
                 <div class="row">
@@ -164,7 +164,7 @@
                             <i class="icon-leaf"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>学历认证直接认证资源，没有中介收取介绍费用，最低的价格，最快的速度，最贴心的服务</h5>
+                            <h5>学历认证直接认证资源，没有中介收取介绍费用，只有更低的价格，更快的速度，贴心的服务</h5>
                         </div>
                     </div>
 
