--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -26,7 +26,7 @@
     <div class="container" >
         <div class="row" style="margin-top: 3em;">
             <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h3>关于恒心</h3>
+                <h3>恒心前途教育咨询有限公司</h3>
                 <p>恒心教育，留学群体的一站式管家</p>
                 <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
 {#                <p>We are unique, 我们只是比别人多了一点恒心</p>#}
