--- a/core/templates/web/aboutus.html
+++ b/core/templates/web/aboutus.html
@@ -27,7 +27,7 @@
         <div class="row" style="margin-top: 3em;">
             <div class="col-xs-8 col-xs-offset-2 text-center heading-section animate-box fadeInUp animated">
                 <h3>四川恒心前途教育咨询有限公司</h3>
-                <p>恒心教育，留学群体的一站式管家</p>
+                <p>四川恒心前途教育咨询有限公司，是成立于2016年的留学群体一站式服务机构。</p>
                 <p>我们向留学生群体提供从名校直通、课业辅导、学历学位认证到职业规划，创业贷款申请指导、生活辅助的一站式服务。同时，还针对国内有留学意愿的群体，开通了海外短期游学、就业培训、移民落户指导等项目。</p>
 {#                <p>We are unique, 我们只是比别人多了一点恒心</p>#}
 {#                <p>You are fortunate, 你只是比别人多了一点恒心</p>#}
@@ -208,6 +208,14 @@
                 <div class="col-xs-6 animate-box fadeInUp animated">
                     <div class="feature-left">
 						<span class="icon">
+							<i class="icon-phone-hang-up"></i>
+						</span>
+                        <div class="feature-copy text-left">
+                            <h4>手机电话：18190741735  18190747817</h4>
+                        </div>
+                    </div>
+                    <div class="feature-left">
+						<span class="icon">
 							<i class="icon-phone"></i>
 						</span>
                         <div class="feature-copy text-left">
@@ -238,6 +246,15 @@
 						</span>
                         <div class="feature-copy text-left">
                             <h4>地址：四川省成都市高新区天府大道中段666号希顿国际广场C座1203室</h4>
+                        </div>
+                    </div>
+                    <div class="feature-left">
+						<span class="icon">
+							<i class="icon-location"></i>
+						</span>
+                        <div class="feature-copy text-left">
+                            <h4>乘车路线：乘坐地铁1号线至天府三街站，北方向出发，沿天府大道中段辅路走190米，左转
+                                走80米到达。</h4>
                         </div>
                     </div>
 
