--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -1,5 +1,5 @@
 {% extends "inc/master.html" %}
-{% block title %}学历学位认证{% endblock %}
+{% block title %}学历学位获取{% endblock %}
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
@@ -16,8 +16,8 @@
         <div class="container" style="margin-top:3em;">
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 text-center heading-section" id="highschool">
-                    <h4>学历学位认证</h4>
-                    <p>既然当初踌躇满志的去了，哪有半途而废败兴而退的道理？恒心定制专业认证解决方案，一定让你满载而归。</p>
+                    <h4>学历学位获取</h4>
+                    <p>既然当初踌躇满志的去了，哪有半途而废败兴而退的道理？恒心定制专业解决方案，一定让你满载而归。</p>
                 </div>
 
                 <div class="col-xs-6">
@@ -29,7 +29,7 @@
                             <img src="/static/images/web/left-top.png">
                         </div>
                         <div class="education-text ">
-                            <p>什么是学历学位认证？</p>
+                            <p>什么是学历学位获取？</p>
                         </div>
                         <div style="text-align:right">
                             <img src="/static/images/web/right-down.png">
@@ -42,7 +42,7 @@
                             <i class="icon-quill"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
+                            <h5>国（境）外学历学位获取是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h5>
 {#                            <h5></h5>#}
                         </div>
                         <br/>
@@ -164,7 +164,7 @@
                             <i class="icon-leaf"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>学历认证直接认证资源，没有中介收取介绍费用，只有更低的价格，更快的速度，贴心的服务</h5>
+                            <h5>学历获取直接获取资源，没有中介收取介绍费用，只有更低的价格，更快的速度，贴心的服务</h5>
                         </div>
                     </div>
 
@@ -173,7 +173,7 @@
                             <i class="icon-search"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>除客服的及时反馈外，恒心官网还拥有定制会员系统，可随时查询认证进度</h5>
+                            <h5>除客服的及时反馈外，恒心官网还拥有定制会员系统，可随时查询进度</h5>
                         </div>
                     </div>
 
@@ -182,7 +182,7 @@
                             <i class="icon-stats-dots"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构认证成功率下降的艰难环境下，恒心仍能保持80%以上的认证成功几率</h5>
+                            <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构获取成功率下降的艰难环境下，恒心仍能保持80%以上的成功几率</h5>
                         </div>
                     </div>
 
@@ -200,7 +200,7 @@
                             <i class="icon-spinner11"></i>
                         </span>
                         <div class="feature-copy">
-                            <h5>如果认证结果失败，恒心保证退还所有认证费用</h5>
+                            <h5>如果获取结果失败，恒心保证退还所有费用</h5>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
 {#            </div>#}
             <div class="row">
                     <div class="col-xs-12 text-center"  style="margin-bottom: 3em;">
-                        <h1>申请学历学位认证所需材料</h1>
+                        <h1>申请学历学位获取所需材料</h1>
                     </div>
 
                 </div>
@@ -234,7 +234,7 @@
                                 <i class="icon-bookmarks"></i>
                             </span>
                             <div class="feature-copy">
-                                <h5>需认证的国外源语言（颁发证书院校国家的官方语言）学位证书或高等教育文凭正本原件及复印件</h5>
+                                <h5>需要获取的国外源语言（颁发证书院校国家的官方语言）学位证书或高等教育文凭正本原件及复印件</h5>
                             </div>
                         </div>
 
@@ -243,7 +243,7 @@
                                 <i class="icon-files-empty"></i>
                             </span>
                             <div class="feature-copy">
-                                <h5>需认证学位证书或高等教育文凭所学课程完整的正式成绩单原件及复印件</h5>
+                                <h5>需要获取学位证书或高等教育文凭所学课程完整的正式成绩单原件及复印件</h5>
                             </div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                                 <i class="icon-file-text2"></i>
                             </span>
                             <div class="feature-copy">
-                                <h5>需认证的国外学位证书（高等教育文凭）和成绩单（研究证明信）的中文翻译件原件（须经正规翻译机构（公司）进行翻译，个人翻译无效）</h5>
+                                <h5>需要获取的国外学位证书（高等教育文凭）和成绩单（研究证明信）的中文翻译件原件（须经正规翻译机构（公司）进行翻译，个人翻译无效）</h5>
                             </div>
                         </div>
 
