--- a/core/templates/web/ksbk.html
+++ b/core/templates/web/ksbk.html
@@ -29,7 +29,7 @@
         <div class="row" style="margin-top:4em;">
             <div class="col-xs-8 col-xs-offset-2 text-center animate-box fadeInUp animated" style="margin-bottom: 2em;">
                 <h1>“毕世大大学快速本科”</h1>
-                <h1>--市面上唯一可签发I-20的快速毕业项目，可申请CPT,OPT</h1>
+                <h1>--市面上可签发I-20的快速毕业项目，可申请CPT,OPT</h1>
             </div>
         </div>
         <div class="row">
